# rust_for_fun

./: Cargo.toml
src/: main.rs
